// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode off) 1`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-unnamed-0": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": {
      "val": 1,
    },
    "status": "Active",
    "weight": 1,
  },
  "@@selector-unnamed-0": {
    "className": "SelectorInstance",
    "observers": {
      "Test-:r0:": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "sources": {
      "1": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": {
      "val": 1,
    },
    "status": "Active",
    "weight": 2,
  },
  "Test-:r0:": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "@@selector-unnamed-0": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 3,
  },
}
`;

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode off) 2`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-unnamed-0": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": {
      "val": 2,
    },
    "status": "Active",
    "weight": 1,
  },
  "@@selector-unnamed-0": {
    "className": "SelectorInstance",
    "observers": {
      "Test-:r0:": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "sources": {
      "1": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": {
      "val": 2,
    },
    "status": "Active",
    "weight": 2,
  },
  "Test-:r0:": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "@@selector-unnamed-0": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 3,
  },
}
`;

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode on) 1`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-unnamed-2": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": {
      "val": 1,
    },
    "status": "Stale",
    "weight": 1,
  },
  "@@selector-unnamed-2": {
    "className": "SelectorInstance",
    "observers": {
      "Test-:r0:": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "sources": {
      "1": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": {
      "val": 1,
    },
    "status": "Active",
    "weight": 2,
  },
  "Test-:r0:": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "@@selector-unnamed-2": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 3,
  },
}
`;

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode on) 2`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-unnamed-2": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": {
      "val": 2,
    },
    "status": "Stale",
    "weight": 1,
  },
  "@@selector-unnamed-2": {
    "className": "SelectorInstance",
    "observers": {
      "Test-:r0:": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "sources": {
      "1": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": {
      "val": 2,
    },
    "status": "Active",
    "weight": 2,
  },
  "Test-:r0:": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "@@selector-unnamed-2": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 3,
  },
}
`;

exports[`useAtomSelector inline selectors are swapped out in strict mode double-renders 1`] = `
{
  "@@selector-unnamed-2": {
    "className": "SelectorInstance",
    "observers": {
      "Test-:r0:": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "sources": {
      "1": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 1,
    "status": "Active",
    "weight": 2,
  },
}
`;

exports[`useAtomSelector inline selectors are swapped out in strict mode double-renders 2`] = `
{
  "@@selector-unnamed-2": {
    "className": "SelectorInstance",
    "observers": {
      "Test-:r0:": {
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "sources": {
      "1": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 1,
    "status": "Active",
    "weight": 2,
  },
}
`;
